--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": "~7.1",
+    "webino/exceptions": "dev-develop",
     "league/climate": "3.*",
     "psy/psysh": "0.*"
   },
